# octopus

./: .gitignore  README.md  goal.md  install.sh  pyproject.toml
config/: settings.yaml
octopus/: __init__.py  cli.py  config.py  models.py
octopus/agent/: brain.py  dispatcher.py
octopus/arms/: __init__.py  arm1_email.py  arm2_calendar.py  arm3_scheduler.py  arm4_sandbox.py  arm5_tasks.py  arm6_notify.py  arm7_memory.py  arm8_search.py
octopus/gui/: server.py
octopus/gui/static/: index.html
octopus/providers/: __init__.py  asana_provider.py  base.py  gmail.py  google_calendar.py  imap.py  markdown_tasks.py
octopus/security/: __init__.py  exec_sandbox.py  injection.py  privacy.py  sandbox.py
octopus/skills/: __init__.py  base.py  draft_email_template.py  fetch_context.py  propose_slots.py  run_shell.py  send_to_sandbox.py  stage_draft.py  sync_task.py
octopus/workflows/: __init__.py  engine.py  loader.py
workflows/: daily_briefing.yaml  inbound_client_lead.yaml  meeting_scheduler.yaml
