[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octopus"
version = "0.1.0"
description = "An 8-armed AI personal assistant for the terminal"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "chromadb>=0.5",
    "google-auth>=2.28",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.120",
    "python-dateutil>=2.9",
    "asana>=3.2",
    "httpx>=0.27",
    "keyring>=25.0",
    "platformdirs>=4.2",
    "python-dotenv>=1.0",
    "flask>=3.0",
    "groq>=0.9",
    "openai>=1.30",
    "google-generativeai>=0.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
octopus = "octopus.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["octopus*"]

[tool.ruff]
line-length = 100
target-version = "py311"
